# Keysight_Scopes_Tool

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: testing-guidelines.md
docs/architecture/: monorepo-layout.md
docs/cli/: README.md  cli-integration.md
docs/contracts/: common-worker-protocol.md  scopes-cli-jsonl-contract.md  scopes-orchestrator-workflows.md  scopes-worker-contract.md
docs/core/: README.md  integration.md  supported-models.md
docs/webui/: README.md
examples/: 01_list_resources.py  02_query_idn.py
scripts/: hardware-acquisition-check.ps1  preflight-acquisition.ps1  run-tests.ps1
src/keysight_scope/: __init__.py  acquisition.py  batch.py  capabilities.py  channel.py  cli.py  errors.py  fake_backend.py  idn.py  log.py  measure_logger.py  measurements.py  scope.py  scpi.py  simulator_backend.py  simulator_config.py  status.py  timebase.py  visa_backend.py  waveform.py
src/keysight_scope_cli/: cli.py  worker.py
src/keysight_scope_core/: __init__.py  acquisition.py  advanced.py  capabilities.py  channel.py  demo.py  display.py  dvm.py  errors.py  measure_logger.py  measurements.py  operations.py  planning.py  save_export.py  scope.py  scpi.py  screenshot.py  search.py  simulator_backend.py  trigger.py  visa_backend.py  waveform.py
src/keysight_scope_webui/: __init__.py
src/scopes_tool_cli/: __init__.py  __main__.py  cli.py  worker.py
src/scopes_tool_core/: __init__.py  advanced.py  batch.py  capabilities.py  demo.py  drivers.py  dvm.py  errors.py  fake_backend.py  identity.py  idn.py  log.py  measure_logger.py  operations.py  output_files.py  planning.py  reference.py  run_config.py  scope.py  screenshot.py  search.py  simulator_backend.py  simulator_config.py  status.py  (+1 more)
tests/: test_acquisition.py  test_acquisition_cli.py  test_advanced.py  test_agent_safe_cli.py  test_batch.py  test_batch_cli.py  test_capabilities.py  test_channel.py  test_cli.py  test_errors.py  test_fake_backend.py  test_idn.py  test_log.py  test_measure_logger.py  test_measure_logger_cli.py  test_measurements.py  test_scope.py  test_scpi.py  test_screenshot.py  test_simulator_backend.py  test_simulator_config.py  test_status.py  test_timebase.py  test_trigger.py  test_visa_backend.py  test_waveform.py
(+127 files in other folders)
