[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scopes-tool"
version = "0.1.0"
description = "Vendor-neutral oscilloscope tooling with current support for Keysight InfiniiVision models."
requires-python = ">=3.10"
dependencies = ["pyvisa>=1.14"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8"]
webui = []
all = []

[project.scripts]
scopes-tool = "scopes_tool_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scopes_tool_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
markers = ["hardware: opt-in tests that require a real oscilloscope"]
pythonpath = ["src"]
